# claude-2x-tracker

./: .gitignore  LICENSE  Learn.md  README.md  config.json  schedule.json
.github/workflows/: build.yml
Claude2xWidget/Claude2xWidget/: AppDelegate.swift  Claude2xWidgetApp.swift  ContentView.swift  FloatingWindow.swift  Info.plist  LayoutVariants.swift  StatusEngine.swift
Claude2xWidget/Claude2xWidget.xcodeproj/: project.pbxproj
Claude2xWidget/Claude2xWidget/Views/: CalendarStrip.swift  ClockView.swift  DailyWindowBar.swift  GlassContainer.swift  StatusCard.swift
kde-widget/: install.sh
kde-widget/package/: metadata.json
kde-widget/package/contents/ui/: main.qml
tray/: package-lock.json  package.json
tray/src/: index.html  main.js  style.css
tray/src-tauri/: Cargo.toml  tauri.conf.json
tray/src-tauri/icons/: icon.icns
tray/src-tauri/src/: lib.rs  main.rs
