[package]
name = "twox"
version = "0.1.0"
description = "TwoX — Claude 2× usage tracker (system tray)"
authors = ["Xczer"]
edition = "2021"

[lib]
name = "twox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "twox"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png", "macos-private-api"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
ureq = "3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
